# fbcp-ili9341

./: .gitignore  Build.sh  CMakeCache.txt  CMakeLists.txt  README.md  XPT2046.cpp  XPT2046.h  calibrate.c  calibrate.cpp  calibrate.h  cma.cpp  cma.h  config.h  diff.cpp  diff.h  display.cpp  display.h  dma.cpp  dma.h  fbcp-ili9341.conf  fbcp-ili9341.cpp  fbcp-ili9341.service  freeplaytech_waveshare32b.h  gc9a01.cpp  gc9a01.h  gpu.cpp  gpu.h  hx8357d.cpp  hx8357d.h  ili9340.cpp  ili9340.h  ili9341.cpp  ili9341.h  ili9342.cpp  ili9342.h  ili9486.cpp  ili9486.h  ili9486l.h  ili9488.cpp  ili9488.h  (+31 more)
.github/: FUNDING.yml
debian/: README.Debian  changelog  control  copyright  fbcp-ili9341-module  fbcp-ili9341-module.1  fbcp-ili9341.conf  fbcp-ili9341.config  fbcp-ili9341.dirs  fbcp-ili9341.dkms  fbcp-ili9341.lintian-overrides  fbcp-ili9341.manpages  fbcp-ili9341.modprobe  fbcp-ili9341.postinst  fbcp-ili9341.postrm  fbcp-ili9341.prerm  fbcp-ili9341.templates  rules  tcCalib.1  tcTest.1
kernel/: Makefile  bcm2835_spi_display.c  build_kernel_module.sh  gpioirq.c  gpioirq.h  start_kernel_module.sh  stop_kernel_module.sh
util/: Makefile  tcCalib.cpp  tcTest.cpp
